# Image-processing-library

./: CMakeLists.txt  Image.cpp  Image.h  ImageProcessing.cpp  ImageProcessing.h  Point.cpp  Point.h  README.md  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h  drawing.cpp  drawing.h  main.cpp  test.cpp
